test/scc/expr/semantic-errors/129.a
129.t:3:15: error: array index in non-array initializer